fixed bugs with steepshot's logo and with text z-index

--- a/steepshot_io/static/css/main.css
+++ b/steepshot_io/static/css/main.css
@@ -219,6 +219,7 @@ a {
     opacity: 1;
     transition: 0.45s;
     position: fixed;
+    z-index: 2;
 }
 
 #buttons {
@@ -463,7 +464,7 @@ a {
 
 .backtext {
     background-image: url("Text BG@3x.png");
-    margin: 6% 0 -6.5em 0;
+    margin: 1% 0 -1.5em 0;
     transition: 0.45s;
     background-repeat: no-repeat;
     padding: 110px;
@@ -473,7 +474,7 @@ a {
 }
 
 .frontext {
-    width: 60%;
+    width: 70%;
     transition: 0.45s;
 }
 
